# starcall-online

./: .gitignore  .mcp.json  CLAUDE.md  selfIdentity.plist
backend/: .env.example  Makefile  pyproject.toml  selfIdentity.plist
backend/agents-2/lin/: agent.yaml  prompt.txt
backend/agents-2/ming/: agent.yaml  prompt.txt
backend/agents-2/zhuoyang/: agent.yaml  prompt.txt
backend/agents/ellen/: agent.yaml  prompt.txt
backend/agents/eva/: agent.yaml  prompt.txt
backend/agents/ming/: agent.yaml  prompt.txt
backend/agents/shijing/: agent.yaml
backend/app/: agent_task_manager.py  codec.py  config.py  deep_agent_runner.py  gemini_proxy.py  gemini_tools.py  main.py  models.py  output_controller.py  registry.py  sdk_agent_runner.py  session_manager.py  transcript_buffer.py  tts_rephraser.py  tts_service.py
backend/app/a2a/: agent_cards.py  ask_agent_tool.py  client.py  delegation.py  executor.py  server.py
backend/app/routers/: agents.py  health.py  sessions.py
backend/app/tools/: dispatch.py  ellen_tools.py  eva_tools.py  mcp_servers.py  ming_tools.py  shijing_tools.py
backend/app/ws/: handler.py
backend/demos/: demo_case_1.py  demo_case_2.py  demo_case_2_physical.py  demo_case_3.py  demo_case_4.py  demo_case_5.py  demo_case_6.py  demo_harness.py  run_demo.py  run_physical.py
backend/demos/output/: physical_Case_8_Barge-in_during_project_agent_res_20260401_002029_timeline.txt  physical_Case_8_Barge-in_during_project_agent_res_20260401_005641_timeline.txt  (+6 more)
backend/prompts/: ellen.txt  eva.txt  ming.txt  shijing.txt
backend/tests/: TEST_RESULTS.md
(+157 files in other folders)
